<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:background="#e7e8da"
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/hint_text"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_send_activation_code_to_you"/>
        <EditText
            android:layout_below="@+id/hint_text"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLength="4"
            android:id="@+id/edt_input_activation_code"
            android:textColorHint="#949295"
            android:drawablePadding="10dp"
            android:hint="@string/secret_active_code_number"
            android:gravity="center"
            android:inputType="phone"
            android:imeOptions="actionDone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_input_activation_code"
            android:padding="10dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="20dp"
                android:paddingEnd="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.33"
                android:id="@+id/btn_send_activation_code_again"
                android:text="@string/send_again"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#ffffff"
                android:background="@drawable/disable_button_background"
                />
            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/circle_background"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/time_placeholder"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#ffffff"
                    android:id="@+id/timer_text"/>
            </LinearLayout>
            <Button
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="20dp"
                android:paddingEnd="20dp"
                android:enabled="false"
                android:layout_weight="0.33"
                android:layout_gravity="center_vertical"
                android:text="@string/wrong_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#ffffff"
                android:background="@drawable/button_background"
                />
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_black_24dp"
                    android:id="@+id/btn_send_activation_code"
                    android:visibility="gone"
                    android:contentDescription="@string/action_done_button"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="right|center"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/your_code"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
